# chrome-tab-mcp

./: .env.example  .gitattributes  .gitignore  .puppeteerrc.cjs  ACCESS_CONTROL_SETUP.md  BROWSER_EXTENSION_DESIGN.md  BROWSER_EXTENSION_TESTING.md  CLAUDE.md  CROSS_PLATFORM_PROPOSAL.md  DESIGN.md  NATIVE_MESSAGING_SETUP.md  README.md  README_HTTP.md  README_MCP.md  TESTING_NATIVE_HOST.md  TESTING_QUICK_START.md  _install_native_host.ps1  chrome_tab.scpt  chrome_tab_http_server.py  chrome_tab_mcp_config.json  chrome_tab_mcp_server.py  chrome_tab_native_host.py  com.chrome_tab_reader.host.json  diagnose_native_host.ps1  diagnose_native_host.sh  get_chrome_tab.py  install_native_host.ps1  install_native_host.sh  jest.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run_tests.ps1  run_tests.sh  setup_token.sh  test_fastapi_server.py  test_native_host.sh  test_native_messaging_simulation.py  (+3 more)
.githooks/: README.md  pre-commit
.github/workflows/: pages.yml  pr-check.yml  test-extension.yml  test-python.yml
extension/: ARCHITECTURE.md  README.md  SETUP.md  TESTING.md  content_script.js  manifest.json  popup.html  popup.js  service_worker.js
tests/: BROWSER_EXTENSION_TESTING.md  README.md  TESTING_NATIVE_MESSAGING.md  TESTING_QUICK_START.md  e2e_native_host_manager.py  extraction.test.js  installation.test.js  manual_extension_test.js  manual_test_native_messaging.py  requirements-test.txt  test-utils.js  test_e2e_native_messaging.py  test_http_server.py  test_native_messaging.py  ui.test.js
tests/test-pages/: test-complex.html  test-keywords.html  test-readability.html  test-simple.html
