[project]
name = "chrome-tab-mcp"
version = "0.1.0"
description = "Extract and analyze content from Chrome tabs using AI. Supports Chrome extension, HTTP API, and MCP server."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # MCP Server dependencies
    "fastmcp>=0.1.0",
    "requests>=2.31.0",

    # HTTP Server dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",

    # Optional: XDG Base Directory Specification compliance
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",  # Required for FastAPI TestClient
    "playwright>=1.40.0",
]

dev = [
    "chrome-tab-mcp[test]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "chrome_tab_mcp_server",
    "chrome_tab_http_server",
    "chrome_tab_native_host",
    "get_chrome_tab",
    "test_fastapi_server",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]
markers = [
    "integration: marks tests as integration tests (require native host running)",
    "e2e: marks tests as end-to-end tests (require Chrome with extension)",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "test_*.py",
    "extension/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
